--- a/ajaxmessage.html
+++ b/ajaxmessage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>#</title>
+        <title>Write a message</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
         <link href="styles.css" rel="stylesheet" type="text/css">
     </head>
@@ -42,7 +42,7 @@
                 document.getElementById("notification").innerHTML = "You have to fill in your name!";
                 document.getElementById("notification").style.display = "inline";
             } else if (country == "") {
-                document.getElementById("notification").innerHTML = "You to fill in  your country!";
+                document.getElementById("notification").innerHTML = "You have to fill in  your country!";
                 document.getElementById("notification").style.display = "inline";
             } else if (message == "") {
                 document.getElementById("notification").innerHTML = "You have to fill in your message!";
