--- a/newmessage.html
+++ b/newmessage.html
@@ -23,7 +23,7 @@
         <form method="POST" action="/newmessage">
             <div class="form-group"><label for="username">Name: </label> <input class="form-control" type="text" name="username" placeholder="Name" required></div>
             <div class="form-group"><label for="country">Country: </label> <input class="form-control" type="text" name="country" placeholder="Country" required></div>
-            <div class="form-group"><label for="message">Message: </label> <input class="form-control" type="text" name="message" placeholder="Message" required></div>
+            <div class="form-group"><label for="message">Message: </label> <textarea class="form-control" name="message" placeholder="Message" required></textarea></div>
             <input type="submit" value="Submit" class="btn btn-primary">
         </form>
     </div>
